--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -2,28 +2,32 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Video Player</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Video Player App</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <style>
-    html, body {
-      height: 100%;
+    body {
       margin: 0;
-      background-color: black;
-      font-family: sans-serif;
+      background: black;
+      color: white;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
     }
 
     .video-wrapper {
-      height: 100vh;
+      flex: 1;
+      position: relative;
       overflow-y: scroll;
       scroll-snap-type: y mandatory;
+      padding-bottom: 160px;
     }
 
-    .video-container {
-      height: 100vh;
+    .video-slide {
       scroll-snap-align: start;
+      height: 100vh;
       position: relative;
     }
 
@@ -33,12 +37,34 @@
       object-fit: cover;
     }
 
+    .bottom-info {
+      position: absolute;
+      bottom: 130px;
+      left: 10px;
+      right: 10px;
+      z-index: 10;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      color: white;
+      background: rgba(0, 0, 0, 0.4);
+      padding: 8px;
+      border-radius: 10px;
+    }
+
+    .bottom-info img {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+
     .controls {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      z-index: 10;
+      z-index: 5;
     }
 
     .controls button {
@@ -48,197 +74,128 @@
       width: 60px;
       height: 60px;
       border-radius: 50%;
-      font-size: 26px;
       display: flex;
       align-items: center;
       justify-content: center;
+      font-size: 26px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
     }
 
-    .bottom-info {
+    .sidebar {
       position: absolute;
-      bottom: 90px;
-      left: 10px;
       right: 10px;
+      bottom: 200px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
       z-index: 10;
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      color: white;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 8px;
-      border-radius: 10px;
     }
 
-    .bottom-info img {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      margin-right: 10px;
-    }
-
-    .bottom-navbar {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: #111;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 8px 0;
-      z-index: 200;
-    }
-
-    .bottom-navbar div {
-      color: white;
-      font-size: 12px;
-      text-align: center;
-      flex: 1;
-    }
-
-    .bottom-navbar i {
+    .sidebar i {
       font-size: 22px;
     }
 
-    .right-navbar {
-      position: fixed;
-      right: 10px;
-      top: 30%;
-      z-index: 150;
+    .bottom-navbar {
       display: flex;
-      flex-direction: column;
-      gap: 15px;
+      justify-content: space-around;
+      background: #111;
+      padding: 10px 0;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 20;
     }
 
-    .right-navbar button {
-      background: rgba(0, 0, 0, 0.5);
+    .bottom-navbar button {
+      background: none;
       border: none;
       color: white;
-      padding: 10px;
-      border-radius: 50%;
-      font-size: 18px;
+      font-size: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
-    #videoInput {
+    .bottom-navbar input[type="file"] {
       display: none;
     }
   </style>
 </head>
 <body>
-  <!-- File input (hidden) -->
-  <input type="file" id="videoInput" multiple accept="video/*">
-
-  <!-- Right Navbar -->
-  <div class="right-navbar">
-    <button><i class="fas fa-thumbs-up"></i></button>
-    <button><i class="fas fa-thumbs-down"></i></button>
-    <button><i class="fas fa-comment"></i></button>
-    <button><i class="fas fa-share"></i></button>
-    <button onclick="repeatVideo()"><i class="fas fa-redo"></i></button>
+  <div class="video-wrapper" id="videoWrapper">
+    <!-- Video items akan ditambahkan di sini -->
   </div>
 
-  <!-- Video Display -->
-  <div class="video-wrapper" id="videoWrapper"></div>
-
-  <!-- Bottom Navbar -->
+  <!-- BOTTOM NAVBAR -->
   <div class="bottom-navbar">
-    <div><i class="fas fa-home"></i><br>Home</div>
-    <div><i class="fas fa-film"></i><br>Shorts</div>
-    <div onclick="document.getElementById('videoInput').click()">
-      <i class="fas fa-plus-circle"></i><br>Upload
-    </div>
-    <div><i class="fas fa-video"></i><br>Subs</div>
-    <div><i class="fas fa-user"></i><br>You</div>
+    <button><i class="bi bi-house-door"></i><small>Home</small></button>
+    <button><i class="bi bi-collection-play"></i><small>Shorts</small></button>
+    
+    <label>
+      <i class="bi bi-plus-circle-fill" style="font-size: 28px;"></i>
+      <input type="file" id="videoInput" accept="video/*" multiple>
+    </label>
+    
+    <button><i class="bi bi-people"></i><small>Subs</small></button>
+    <button><i class="bi bi-person"></i><small>You</small></button>
   </div>
 
   <script>
     const videoInput = document.getElementById('videoInput');
     const videoWrapper = document.getElementById('videoWrapper');
-    let videoList = [];
-    let currentIndex = 0;
 
     videoInput.addEventListener('change', function () {
-      videoList = Array.from(this.files);
-      if (videoList.length > 0) {
-        videoWrapper.innerHTML = '';
-        shuffle(videoList);
-        videoList.forEach((file, index) => {
-          const url = URL.createObjectURL(file);
-          const container = document.createElement('div');
-          container.className = 'video-container';
-          container.innerHTML = `
-            <video src="${url}" ${index === 0 ? 'autoplay' : ''} playsinline></video>
-            <div class="controls">
-              <button onclick="togglePlayPause(this)">
-                <i class="fas fa-pause"></i>
-              </button>
-            </div>
-            <div class="bottom-info">
-              <img src="https://via.placeholder.com/40" alt="avatar">
-              <span class="me-auto">@aqsa1610</span>
-              <button class="btn btn-danger btn-sm">Subscribe</button>
-            </div>
-          `;
-          videoWrapper.appendChild(container);
+      const files = Array.from(videoInput.files);
+      if (!files.length) return;
+
+      videoWrapper.innerHTML = ""; // kosongkan dulu
+
+      // Acak urutan video
+      files.sort(() => Math.random() - 0.5);
+
+      files.forEach(file => {
+        const url = URL.createObjectURL(file);
+        const slide = document.createElement('div');
+        slide.className = 'video-slide';
+        slide.innerHTML = `
+          <video src="${url}" autoplay loop playsinline></video>
+
+          <div class="controls">
+            <button class="togglePlay"><i class="bi bi-pause-fill"></i></button>
+          </div>
+
+          <div class="bottom-info">
+            <img src="https://i.pravatar.cc/36?u=${file.name}" alt="avatar">
+            <strong>@aqsa1610</strong>
+            <button class="btn btn-danger btn-sm ms-auto">Subscribe</button>
+          </div>
+
+          <div class="sidebar">
+            <button><i class="bi bi-hand-thumbs-up"></i></button>
+            <button><i class="bi bi-hand-thumbs-down"></i></button>
+            <button><i class="bi bi-chat"></i></button>
+            <button><i class="bi bi-share"></i></button>
+            <button><i class="bi bi-arrow-repeat"></i></button>
+          </div>
+        `;
+        videoWrapper.appendChild(slide);
+
+        const video = slide.querySelector('video');
+        video.volume = 1; // pastikan suara aktif
+
+        const toggleBtn = slide.querySelector('.togglePlay');
+        toggleBtn.addEventListener('click', () => {
+          if (video.paused) {
+            video.play();
+            toggleBtn.innerHTML = '<i class="bi bi-pause-fill"></i>';
+          } else {
+            video.pause();
+            toggleBtn.innerHTML = '<i class="bi bi-play-fill"></i>';
+          }
         });
-        playVideoAtIndex(0);
-      }
-    });
-
-    function togglePlayPause(btn) {
-      const video = btn.closest('.video-container').querySelector('video');
-      if (video.paused) {
-        video.play();
-        btn.innerHTML = '<i class="fas fa-pause"></i>';
-      } else {
-        video.pause();
-        btn.innerHTML = '<i class="fas fa-play"></i>';
-      }
-    }
-
-    function playVideoAtIndex(index) {
-      const videos = document.querySelectorAll('video');
-      videos.forEach((v, i) => {
-        if (i === index) {
-          v.currentTime = 0;
-          v.muted = false;
-          v.play();
-        } else {
-          v.pause();
-        }
-
-        v.onended = () => {
-          currentIndex = Math.floor(Math.random() * videoList.length);
-          const nextVideo = document.querySelectorAll('.video-container')[currentIndex];
-          nextVideo.scrollIntoView({ behavior: 'smooth' });
-          playVideoAtIndex(currentIndex);
-        };
-      });
-    }
-
-    function repeatVideo() {
-      const video = document.querySelectorAll('video')[currentIndex];
-      video.currentTime = 0;
-      video.play();
-    }
-
-    videoWrapper.addEventListener('scroll', () => {
-      const videos = document.querySelectorAll('.video-container');
-      videos.forEach((container, index) => {
-        const rect = container.getBoundingClientRect();
-        if (rect.top >= 0 && rect.bottom <= window.innerHeight + 200) {
-          currentIndex = index;
-          playVideoAtIndex(index);
-        }
       });
     });
-
-    function shuffle(array) {
-      for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
-      }
-    }
   </script>
 </body>
 </html>
