--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </a>
       </div>
       <div class="col">
-        <a href="./lainnya/404.html" class="project-button btn-custom-8">
+        <a href="./lainnya/yusup.html" class="project-button btn-custom-8">
           <i class="fas fa-desktop"></i><span>Tools Lainnya 2</span>
         </a>
       </div>
@@ -395,3 +395,4 @@
   </script>
 </body>
 </html>
+
