--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
         </a>
       </div>
       <div class="col">
-        <a href="./lainnya/404.html" class="project-button btn-custom-8">
-          <i class="fas fa-desktop"></i><span>Tools Lainnya 2</span>
+        <a href="./lainnya/yusup.html" class="project-button btn-custom-8">
+          <i class="fas fa-desktop"></i><span>yusup</span>
         </a>
       </div>
     </div>
