--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
         </a>
       </div>
       <div class="col">
-        <a href="spek_konduktor/sk_index.html" class="project-button btn-custom-2">
-          <i class="fas fa-bolt"></i><span>Spesifikasi Konduktor</span>
+        <a href="./lainnya/Kalkulator_hambatan_trial_withTCU.html" class="project-button btn-custom-2">
+          <i class="fas fa-bolt"></i><span>Kalkulator hambatan trial</span>
         </a>
       </div>
       <div class="col">
@@ -320,7 +320,7 @@
       </div>
       <div class="col">
         <a href="./lainnya/yusup.html" class="project-button btn-custom-8">
-          <i class="fas fa-desktop"></i><span>yusup</span>
+          <i class="fas fa-desktop"></i><span>Yu</span>
         </a>
       </div>
     </div>
