--- a/index.html
+++ b/index.html
@@ -319,12 +319,8 @@
         </a>
       </div>
       <div class="col">
-        <a href="./lainnya/yusup_fix.html" class="project-button btn-custom-8">
-<<<<<<< HEAD
-          <i class="fas fa-desktop"></i><span>Yu</span>
-=======
-          <i class="fas fa-desktop"></i><span>Tools Lainnya 2</span>
->>>>>>> 0e8c33007f82727415b0d8d693d13f3eebaac49c
+        <a href="./lainnya/yusup_fix.html" class="project-button btn-custom-7">
+          <i class="fa-solid fa-robot"></i><span>Yusup</span>
         </a>
       </div>
     </div>
