--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       </div>
       <div class="col">
         <a href="./lainnya/yusup_fix.html" class="project-button btn-custom-7">
-          <i class="fa-solid fa-robot"></i><span>Yusup</span>
+          <i class="fa-solid fa-flask"></i></i><span>Yusup</span>
         </a>
       </div>
     </div>
