--- a/lainnya/Kalkulator_hambatan_trial_withTCU.html
+++ b/lainnya/Kalkulator_hambatan_trial_withTCU.html
@@ -125,7 +125,7 @@
             <div class="row g-3">
                 <div class="col-6">
                     <label for="pembacaan_alat" class="form-label">Pembacaan Alat</label>
-                    <input type="number" step="any" class="form-control" id="pembacaan_alat" value="" placeholder="Dalam Ohm (Ω)">
+                    <input type="number" step="any" class="form-control" id="pembacaan_alat" value="" placeholder="Dalam mΩ">
                 </div>
                 <div class="col-6">
                     <label for="panjang" class="form-label">Panjang</label>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="col-6">
                     <label for="faktor_koreksi_suhu" class="form-label">Faktor Koreksi</label>
-                    <input type="number" step="any" class="form-control" id="faktor_koreksi_suhu" value="" placeholder="Tanpa satuan" readonly>
+                    <input type="number" step="any" class="form-control" id="faktor_koreksi_suhu" value="" placeholder="Terisi Otomatis" readonly>
                 </div>
 
                 <div class="col-4">
@@ -184,7 +184,7 @@
 
             <hr class="mt-4">
             <div class="col-12">
-                <p class="footer">Dibuat dengan ❤️ & Bootstrap</p>
+                <p class="footer">Williyanto Adi 2025</p>
             </div>
             
         </div>
