--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
         </a>
       </div>
       <div class="col">
-        <a href="faktor koreksi suhu/fk_index.html" class="project-button btn-custom-3">
-          <i class="fas fa-thermometer-half"></i><span>Faktor Koreksi Suhu</span>
+        <a href=".//lainnya/chots.html" class="project-button btn-custom-3">
+          <i class="fas fa-thermometer-half"></i><span>YouSup Chots Kids</span>
         </a>
       </div>
       <div class="col">
@@ -314,8 +314,8 @@
     <!-- Hidden projects: always in 2 columns, with the same gutter as main grid -->
     <div class="row row-cols-2 g-3 hidden-projects-row hidden-projects" id="hiddenProjects">
       <div class="col">
-        <a href="./lainnya/404.html" class="project-button btn-custom-7">
-          <i class="fas fa-robot"></i><span>Tools Lainnya 1</span>
+        <a href="./faktor koreksi suhu/fk_index.html" class="project-button btn-custom-7">
+          <i class="fas fa-robot"></i><span>Faktor Koreksi</span>
         </a>
       </div>
       <div class="col">
