--- a/lainnya/chots.html
+++ b/lainnya/chots.html
@@ -17,9 +17,11 @@
             padding-bottom: 80px;
         }
         
-        /* Kustomisasi untuk navbar bawah */
+        /* [PERUBAHAN] Kustomisasi untuk navbar bawah */
         .bottom-nav {
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+            padding-top: 5px;   /* Mengurangi padding atas */
+            padding-bottom: 5px; /* Mengurangi padding bawah */
         }
 
         .bottom-nav .nav-link {
@@ -45,10 +47,10 @@
             color: #0d6efd;
         }
 
-        /* CSS untuk konten di kiri bawah, di atas navbar */
+        /* [PERUBAHAN] CSS untuk konten di kiri bawah, di atas navbar */
         .fixed-bottom-container {
             position: fixed;
-            bottom: 90px;
+            bottom: 70px; /* Posisi disesuaikan agar tidak terlalu mepet */
             left: 0;
             right: 0;
             padding: 10px 15px;
@@ -107,16 +109,16 @@
             border-color: #cc0000;
         }
 
-        /* CSS untuk navbar vertikal di kanan */
+        /* [PERUBAHAN] CSS untuk navbar vertikal di kanan */
         .right-nav {
             position: fixed;
-            bottom: 90px;
+            bottom: 70px; /* Posisi disesuaikan agar sejajar dengan konten kiri bawah */
             right: 10px;
             z-index: 10;
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 10px; /* Jarak antar ikon telah dikurangi */
+            gap: 10px;
             background-color: transparent;
         }
 
