--- a/lainnya/chots.html
+++ b/lainnya/chots.html
@@ -38,9 +38,17 @@
             z-index: 10;
         }
 
+        /* Kustomisasi untuk navbar bawah */
         .bottom-nav {
-            background-color: transparent !important;
+            background-color: transparent; /* Default transparan */
             box-shadow: none;
+            transition: background-color 0.3s ease-in-out;
+        }
+
+        /* [BARU] Kelas untuk membuat navbar solid/tidak transparan */
+        .bottom-nav.bottom-nav-solid {
+            background-color: #f8f9fa !important;
+            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .bottom-nav .nav-link {
@@ -53,10 +61,20 @@
             gap: 2px;
         }
 
+        /* [BARU] Mengubah warna teks ikon saat navbar solid */
+        .bottom-nav.bottom-nav-solid .nav-link {
+            color: #6c757d;
+            text-shadow: none;
+        }
+
         .bottom-nav .nav-link.active {
             color: #fff;
         }
-        
+
+        .bottom-nav.bottom-nav-solid .nav-link.active {
+            color: #0d6efd;
+        }
+
         .bottom-nav .nav-link i {
             font-size: 1.5rem;
         }
@@ -65,6 +83,11 @@
             font-size: 2.5rem;
             color: #fff;
         }
+        
+        .bottom-nav.bottom-nav-solid .plus-icon i {
+            color: #0d6efd;
+        }
+
 
         .fixed-bottom-container {
             position: fixed;
@@ -150,7 +173,7 @@
             font-size: 1.5rem;
         }
 
-        /* [BARU] Gaya untuk tombol play/pause di tengah */
+        /* Gaya untuk tombol play/pause di tengah */
         #play-pause-btn-container {
             position: absolute;
             top: 50%;
@@ -162,14 +185,14 @@
             color: #fff;
             font-size: 3rem;
             opacity: 0;
-            pointer-events: none; /* Mencegah tombol mengganggu interaksi lain */
+            pointer-events: none;
             transition: opacity 0.3s ease-in-out;
             z-index: 20;
         }
 
         #play-pause-btn-container.show {
             opacity: 1;
-            pointer-events: auto; /* Mengaktifkan interaksi saat ditampilkan */
+            pointer-events: auto;
         }
     </style>
 </head>
@@ -222,7 +245,7 @@
         </a>
     </nav>
 
-    <nav class="navbar fixed-bottom bottom-nav">
+    <nav class="navbar fixed-bottom bottom-nav" id="bottom-navbar">
         <div class="container-fluid d-flex justify-content-around">
             <a class="nav-link active" href="#">
                 <i class="bi bi-house-door-fill"></i>
@@ -258,6 +281,7 @@
             const fullscreenVideoContainer = document.getElementById('fullscreen-video-container');
             const playPauseBtnContainer = document.getElementById('play-pause-btn-container');
             const playPauseIcon = document.getElementById('play-pause-icon');
+            const bottomNavbar = document.getElementById('bottom-navbar');
 
             let videoFiles = [];
             let currentVideoIndex = 0;
@@ -331,12 +355,14 @@
             videoPlayer.addEventListener('play', () => {
                 playPauseIcon.classList.remove('bi-play-fill');
                 playPauseIcon.classList.add('bi-pause-fill');
+                bottomNavbar.classList.add('bottom-nav-solid');
             });
 
             videoPlayer.addEventListener('pause', () => {
                 playPauseIcon.classList.remove('bi-pause-fill');
                 playPauseIcon.classList.add('bi-play-fill');
-                playPauseBtnContainer.classList.add('show'); // Tampilkan tombol saat video dijeda
+                playPauseBtnContainer.classList.add('show');
+                bottomNavbar.classList.remove('bottom-nav-solid');
             });
         });
     </script>
