--- a/lainnya/chots.html
+++ b/lainnya/chots.html
@@ -26,6 +26,7 @@
             z-index: -1;
         }
 
+        /* [PERUBAHAN] Menghapus atribut 'controls' bawaan dari tag video */
         #video-player {
             width: 100%;
             height: 100%;
@@ -38,7 +39,6 @@
             z-index: 10;
         }
 
-        /* [PERUBAHAN] Mengubah navbar bawah menjadi solid putih secara permanen */
         .bottom-nav {
             background-color: #f8f9fa !important;
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
@@ -51,7 +51,7 @@
             flex-direction: column;
             align-items: center;
             gap: 2px;
-            text-shadow: none; /* Menghilangkan text-shadow karena background sudah putih */
+            text-shadow: none;
         }
 
         .bottom-nav .nav-link.active {
@@ -62,12 +62,10 @@
             font-size: 1.5rem;
         }
         
-        /* [PERUBAHAN] Mengembalikan warna ikon plus ke warna biru */
         .bottom-nav .plus-icon i {
             font-size: 2.5rem;
             color: #0d6efd;
         }
-
 
         .fixed-bottom-container {
             position: fixed;
@@ -178,7 +176,7 @@
 <body>
 
     <div id="fullscreen-video-container">
-        <video id="video-player" controls autoplay loop></video>
+        <video id="video-player" autoplay loop></video>
         
         <div id="play-pause-btn-container">
             <i id="play-pause-icon" class="bi bi-pause-fill"></i>
@@ -278,7 +276,6 @@
                 }
             });
 
-            // [PERUBAHAN] Event listener untuk gulir (scroll) di desktop
             window.addEventListener('wheel', (e) => {
                 if (videoFiles.length <= 1 || isScrolling) {
                     return;
@@ -298,10 +295,9 @@
                 }, 500);
             });
 
-            // [BARU] Event listener untuk sentuhan (swipe) di mobile
             let touchstartY = 0;
             let touchendY = 0;
-            const swipeThreshold = 50; // Jarak swipe minimum dalam piksel
+            const swipeThreshold = 50;
 
             window.addEventListener('touchstart', (e) => {
                 touchstartY = e.changedTouches[0].screenY;
@@ -318,12 +314,10 @@
                 }
 
                 if (touchendY < touchstartY - swipeThreshold) {
-                    // Swipe ke atas (video selanjutnya)
                     isScrolling = true;
                     currentVideoIndex = (currentVideoIndex + 1) % videoFiles.length;
                     playVideo(videoFiles[currentVideoIndex]);
                 } else if (touchendY > touchstartY + swipeThreshold) {
-                    // Swipe ke bawah (video sebelumnya)
                     isScrolling = true;
                     currentVideoIndex = (currentVideoIndex - 1 + videoFiles.length) % videoFiles.length;
                     playVideo(videoFiles[currentVideoIndex]);
